tests/snapshots/render__jobs_filter_applied_no_match.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me                        "
"  F1 Jobs                                                                       "
"╭ Jobs (0/6) ──────────────────────────────────────────────────────────────────╮"
"│ filter: nope                                                                 │"
"│                                                                              │"
"│                             No jobs match "nope"                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Jobs   ↑/↓  select   /  filter   Esc  clear   r  refresh   R  auto-refresh     "
" q  quit   s  settings   ?  help                  ⟳ auto 10s · updated just now "
