tests/snapshots/render__jobs_filter_typing.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs                                                              0 Settings "
"Jobs (2/6) ─────────────────────────────────────────────────────────────────────"
" / api█                                                                         "
"▶ ● success     backend/api/main                                                "
"  ● failed    ⟳ backend/api/release-1.2                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  apply   Esc  cancel   ↑/↓  select   C-u  clear                          "
