tests/snapshots/render__jobs_list.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Jobs (6) ───────────────────────────────────────────────────────────────────────"
"  ● success     backend/api/main                                                "
"▶ ● failed    ⟳ backend/api/release-1.2                                         "
"  ● unstable    backend/worker                                                  "
"  ⊘ disabled    docs                                                            "
"  ● aborted     frontend/web/main                                               "
"  ○ not built   frontend/web/pr-42                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  last build   b  build   /  filter   o  open in browser                  "
