tests/snapshots/render__pipeline_run_boxes.snap
---
source: tests/render.rs
expression: boxes
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"libs/core · #12 · 1 of 1 · unstable · running ──────────────────────────────────"
"┌─────────────────┐                                                             "
"│ ● libs/core #12 │                                                             "
"└┬────────────────┘                                                             "
" │  ┌────────────────────────┐                                                  "
" └─▶│ ● backend/api/main #56 │                                                  "
"    └┬───────────────────────┘                                                  "
"     │  ┌──────────────────────┐                                                "
"     └─▶│ ● deploy/staging #54 │                                                "
"        └┬─────────────────────┘                                                "
"         │  ┌───────────────────┐                                               "
"         ├─▶│ ● tests/smoke #51 │                                               "
"         │  └───────────────────┘                                               "
"         │  ┌─────────────────┐                                                 "
"         └─▶│ ⟳ tests/e2e #49 │                                                 "
"            └─────────────────┘                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ←/→  older/newer   v  view   Enter  open build   p  promote   b  start run     "
