tests/snapshots/render__pipeline_run_tree.snap
---
source: tests/render.rs
expression: tree
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"libs/core · #12 · 1 of 1 · unstable · running ──────────────────────────────────"
"▶ ● libs/core #12                                              22m ago       40s"
"  └─ ● backend/api/main #56                                    18m ago    1m 35s"
"     └─ ● deploy/staging #54                                   14m ago    1m 01s"
"        ├─ ● tests/smoke #51                                   11m ago       30s"
"        └─ ⟳ tests/e2e #49                                     10m ago  10m 00s…"
"           └─ ○ deploy/production  not reached                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ←/→  older/newer   v  view   Enter  open build   p  promote   b  new run       "
