tests/snapshots/render__pipelines_without_relations.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Pipelines (0) ──────────────────────────────────────────────────────────────────"
"                                                                                "
"                                  No pipelines                                  "
"                 No job triggered another in its last 20 builds                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  latest run   b  start run   /  filter                                   "
