tests/snapshots/render__promotions_overlay.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"shop · #7 · 1 of 2 · partial ───────────────────────────────────────────────────"
"▶ ● shop/build #7                                               3h ago       50s"
"  └─ ● shop/test #3                                             3h ago       30s"
"     └─ ○ shop/deploy  not reached                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ╔ Promote ═════════════════════════════════╗                  "
"                  ║                                          ║                  "
"                  ║ ▶ [x] shop/test #3 → shop/deploy         ║                  "
"                  ║                                          ║                  "
"                  ╚══════════════════════════════════════════╝                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Space  tick   Enter  promote   Esc  cancel                                     "
