tests/snapshots/render__quit_confirmation_popup.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds                                                   0 Settings "
"Jobs (6) ───────────────────────────────────────────────────────────────────────"
"▶ ● success     backend/api/main                                                "
"  ● failed    ⟳ backend/api/release-1.2                                         "
"  ● unstable    backend/worker                                                  "
"  ⊘ disabled    docs                                                            "
"  ● aborted     frontend/web/main                                               "
"  ○ not built   frontend/web/pr-42                                              "
"                                                                                "
"                                                                                "
"                     ╔ Quit Leeroy? ══════════════════════╗                     "
"                     ║                                    ║                     "
"                     ║  y / Enter quit     n / Esc stay   ║                     "
"                     ╚════════════════════════════════════╝                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" y/Enter  quit   n/Esc  stay                                                    "
