tests/snapshots/render__refresh_status_in_global_bar.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me                        "
"  F1 Jobs                                                                       "
"╭ Jobs (6) · refreshing… ──────────────────────────────────────────────────────╮"
"│▶ ● success     backend/api/main                                              │"
"│  ● failed    ⟳ backend/api/release-1.2                                       │"
"│  ● unstable    backend/worker                                                │"
"│  ⊘ disabled    docs                                                          │"
"│  ● aborted     frontend/web/main                                             │"
"│  ○ not built   frontend/web/pr-42                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Jobs   ↑/↓  select   /  filter   r  refresh   R  auto-refresh                  "
" q  quit   s  settings   ?  help                       ⟳ auto 10s · refreshing… "
