tests/snapshots/render__refresh_status_in_header.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me     h/?  help   ⟳ 1m ✕ "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Jobs ───────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                               Could not load jobs                              "
"                                    HTTP 502                                    "
"                                Press r to retry                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  last build   /  filter                                                  "
